set(ATHENA_SHADER_TOP_LIST
    )

add_subdirectory("${ATHENA_SHADER_ROOT}/athena/global")
add_subdirectory("${ATHENA_SHADER_ROOT}/athena/visualizer")

set(ATHENA_SHADER_TOP_GROUP ${ATHENA_SHADER_TOP_LIST} PARENT_SCOPE)
set(ATHENA_SHADER_GLOBAL_GROUP ${ATHENA_SHADER_GLOBAL_LIST} PARENT_SCOPE)
set(ATHENA_SHADER_VISUALIZER_GROUP ${ATHENA_SHADER_VISUALIZER_LIST} PARENT_SCOPE)

set(ATHENA_SHADER_LIST
    ${ATHENA_SHADER_TOP_LIST}
    ${ATHENA_SHADER_GLOBAL_LIST}
    ${ATHENA_SHADER_VISUALIZER_LIST}
    PARENT_SCOPE)
