set(ATHENA_SOURCE_TOP_LIST
    "${ATHENA_SOURCE_ROOT}/main.cpp"
    )

add_subdirectory("${ATHENA_SOURCE_ROOT}/athena/core")
add_subdirectory("${ATHENA_SOURCE_ROOT}/athena/tree")

set(ATHENA_SOURCE_TOP_GROUP ${ATHENA_SOURCE_TOP_LIST} PARENT_SCOPE)
set(ATHENA_SOURCE_CORE_GROUP ${ATHENA_SOURCE_CORE_LIST} PARENT_SCOPE)
set(ATHENA_SOURCE_TREE_GROUP ${ATHENA_SOURCE_TREE_LIST} PARENT_SCOPE)

set(ATHENA_SOURCE_LIST
    ${ATHENA_SOURCE_TOP_LIST}
    ${ATHENA_SOURCE_CORE_LIST}
    ${ATHENA_SOURCE_TREE_LIST}
    PARENT_SCOPE)

