set(ATHENA_SOURCE_TOP_LIST
    "${ATHENA_SOURCE_ROOT}/main.cpp"
    )

add_subdirectory("${ATHENA_SOURCE_ROOT}/athena/tree")
add_subdirectory("${ATHENA_SOURCE_ROOT}/athena/polygonizer")
add_subdirectory("${ATHENA_SOURCE_ROOT}/athena/visualizer")
add_subdirectory("${ATHENA_SOURCE_ROOT}/athena/models")

set(ATHENA_SOURCE_TOP_GROUP ${ATHENA_SOURCE_TOP_LIST} PARENT_SCOPE)
set(ATHENA_SOURCE_TREE_GROUP ${ATHENA_SOURCE_TREE_LIST} PARENT_SCOPE)
set(ATHENA_SOURCE_POLYGONIZER_GROUP 
    ${ATHENA_SOURCE_POLYGONIZER_LIST} PARENT_SCOPE)
set(ATHENA_SOURCE_VISUALIZER_GROUP ${ATHENA_SOURCE_VISUALIZER_LIST}
    PARENT_SCOPE)
set(ATHENA_SOURCE_MODELS_GROUP ${ATHENA_SOURCE_MODELS_LIST}
    PARENT_SCOPE)

set(ATHENA_SOURCE_LIST
    ${ATHENA_SOURCE_TOP_LIST}
    ${ATHENA_SOURCE_TREE_LIST}
    ${ATHENA_SOURCE_POLYGONIZER_LIST}
    ${ATHENA_SOURCE_VISUALIZER_LIST}
    ${ATHENA_SOURCE_MODELS_LIST}
    PARENT_SCOPE)

