set(ATHENA_INCLUDE_TOP_LIST
    "${ATHENA_INCLUDE_ROOT}/athena/Athena.hpp"
    )
configure_file("${ATHENA_INCLUDE_ROOT}/athena/Athena.hpp.in" 
    ${ATHENA_INCLUDE_TOP_LIST})

add_subdirectory("${ATHENA_INCLUDE_ROOT}/athena/core")
add_subdirectory("${ATHENA_INCLUDE_ROOT}/athena/fields")
add_subdirectory("${ATHENA_INCLUDE_ROOT}/athena/tree")
add_subdirectory("${ATHENA_INCLUDE_ROOT}/athena/blob")

set(ATHENA_INCLUDE_TOP_GROUP ${ATHENA_INCLUDE_TOP_LIST} PARENT_SCOPE)
set(ATHENA_INCLUDE_CORE_GROUP ${ATHENA_INCLUDE_CORE_LIST} PARENT_SCOPE)
set(ATHENA_INCLUDE_FIELDS_GROUP ${ATHENA_INCLUDE_FIELDS_LIST} PARENT_SCOPE)
set(ATHENA_INCLUDE_TREE_GROUP ${ATHENA_INCLUDE_TREE_LIST} PARENT_SCOPE)
set(ATHENA_INCLUDE_BLOB_GROUP ${ATHENA_INCLUDE_BLOB_LIST} PARENT_SCOPE)

set(ATHENA_INCLUDE_LIST
    ${ATHENA_INCLUDE_TOP_LIST}
    ${ATHENA_INCLUDE_CORE_LIST}
    ${ATHENA_INCLUDE_FIELDS_LIST}
    ${ATHENA_INCLUDE_TREE_LIST}
    ${ATHENA_INCLUDE_BLOB_LIST}
    PARENT_SCOPE)
