set(ATHENA_HEADER "${ATHENA_INCLUDE_ROOT}/athena/Athena.hpp")
set(SHADER_HEADER "${ATHENA_INCLUDE_ROOT}/athena/ShaderPaths.hpp")

if (ATHENA_GUI)
    set(ATHENA_USE_GUI 1)
else() 
    set(ATHENA_USE_GUI 0)
endif()

configure_file("${ATHENA_INCLUDE_ROOT}/athena/Athena.hpp.in" 
    ${ATHENA_HEADER})
configure_file("${ATHENA_INCLUDE_ROOT}/athena/ShaderPaths.hpp.in"
    ${SHADER_HEADER})

set(ATHENA_INCLUDE_TOP_LIST
    ${ATHENA_HEADER}
    ${SHADER_HEADER}
    )

add_subdirectory("${ATHENA_INCLUDE_ROOT}/athena/fields")
add_subdirectory("${ATHENA_INCLUDE_ROOT}/athena/tree")
add_subdirectory("${ATHENA_INCLUDE_ROOT}/athena/polygonizer")
add_subdirectory("${ATHENA_INCLUDE_ROOT}/athena/visualizer")

set(ATHENA_INCLUDE_TOP_GROUP ${ATHENA_INCLUDE_TOP_LIST} PARENT_SCOPE)
set(ATHENA_INCLUDE_FIELDS_GROUP ${ATHENA_INCLUDE_FIELDS_LIST} PARENT_SCOPE)
set(ATHENA_INCLUDE_TREE_GROUP ${ATHENA_INCLUDE_TREE_LIST} PARENT_SCOPE)
set(ATHENA_INCLUDE_POLYGONIZER_GROUP 
    ${ATHENA_INCLUDE_POLYGONIZER_LIST} PARENT_SCOPE)
set(ATHENA_INCLUDE_VISUALIZER_GROUP
    ${ATHENA_INCLUDE_VISUALIZER_LIST} PARENT_SCOPE)

set(ATHENA_INCLUDE_LIST
    ${ATHENA_INCLUDE_TOP_LIST}
    ${ATHENA_INCLUDE_FIELDS_LIST}
    ${ATHENA_INCLUDE_TREE_LIST}
    ${ATHENA_INCLUDE_POLYGONIZER_LIST}
    ${ATHENA_INCLUDE_VISUALIZER_LIST}
    PARENT_SCOPE)
